--- a/config.yml
+++ b/config.yml
@@ -165,6 +165,8 @@ sandbox:
     
   # Network proxy settings
   network:
+    enabled: true
+    proxy_listen_addr: "127.0.0.1:0"
     # Port range for proxy listeners
     proxy_port_range: "10000-20000"
     
