Implement approvals (local tty + API) and enforce approve decisions

--- a/config.yml
+++ b/config.yml
@@ -241,6 +241,8 @@ policies:
 # =============================================================================
 
 approvals:
+  enabled: false
+  mode: "local_tty"
   # How long to wait for approval
   timeout: "5m"
   
