--- a/config.yml
+++ b/config.yml
@@ -167,6 +167,9 @@ sandbox:
   network:
     enabled: true
     proxy_listen_addr: "127.0.0.1:0"
+    transparent:
+      enabled: false
+      subnet_base: "10.250.0.0/16"
     # Port range for proxy listeners
     proxy_port_range: "10000-20000"
     
