--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,8 @@ server:
     
   # gRPC server (optional, for high-performance clients)
   grpc:
+    # Provides: CreateSession, Exec, ExecStream, EventsTail.
+    # When enabled, the CLI can use gRPC for exec/events via `AGENTSH_TRANSPORT=grpc`.
     enabled: false
     addr: "127.0.0.1:9090"
     
@@ -50,6 +52,9 @@ auth:
     #   allowed_sessions: 10
     keys_file: "./configs/api_keys.yaml"
     header_name: "X-API-Key"
+    # gRPC clients should send the same key via metadata:
+    # - "x-api-key" (default), or
+    # - the configured header_name lowercased (e.g. "x-api-key").
     
   # JWT authentication (alternative)
   jwt:
