docs: add release .deb Dockerfile.example and remove Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     # Or build locally:
     # build:
     #   context: .
-    #   dockerfile: Dockerfile
+    #   dockerfile: Dockerfile.example
     
     container_name: agentsh
     hostname: agentsh
