--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -4,7 +4,7 @@
 # Build:
 #   docker build -f Dockerfile.example \
 #     --build-arg AGENTSH_REPO=erans/agentsh \
-#     --build-arg AGENTSH_TAG=v0.1.0-test3 \
+#     --build-arg AGENTSH_TAG=v0.1.0 \
 #     --build-arg DEB_ARCH=amd64 \
 #     -t agentsh-example:latest .
 #
@@ -15,7 +15,7 @@
 FROM debian:bookworm-slim
 
 ARG AGENTSH_REPO=erans/agentsh
-ARG AGENTSH_TAG=v0.1.0-test3
+ARG AGENTSH_TAG=v0.1.0
 ARG DEB_ARCH=amd64
 
 RUN set -eux; \
