--- a/config.yml
+++ b/config.yml
@@ -174,6 +174,9 @@ sandbox:
     transparent:
       enabled: false
       subnet_base: "10.250.0.0/16"
+    ebpf:
+      enabled: false          # Linux only; set true to capture connects without proxy
+      required: false         # If true and unsupported, agentsh fails to start; setting required=true implies enabled
     # Port range for proxy listeners
     proxy_port_range: "10000-20000"
     
