feat: add arm64 CO-RE object and runtime selection

--- a/internal/netmonitor/ebpf/Makefile
+++ b/internal/netmonitor/ebpf/Makefile
@@ -1,12 +1,15 @@
 BPF_CLANG ?= clang
-BPF_CFLAGS ?= -O2 -g -Wall -Werror -target bpf -D__TARGET_ARCH_x86
+BPF_CFLAGS ?= -O2 -g -Wall -Werror -target bpf
 
-all: connect_bpfel.o
+all: connect_bpfel.o connect_bpfel_arm64.o
 
 connect_bpfel.o: connect.bpf.c
-	$(BPF_CLANG) $(BPF_CFLAGS) -c $< -o $@
+	$(BPF_CLANG) $(BPF_CFLAGS) -D__TARGET_ARCH_x86 -c $< -o $@
+
+connect_bpfel_arm64.o: connect.bpf.c
+	$(BPF_CLANG) $(BPF_CFLAGS) -D__TARGET_ARCH_arm64 -c $< -o $@
 
 clean:
-	rm -f connect_bpfel.o
+	rm -f connect_bpfel.o connect_bpfel_arm64.o
 
 .PHONY: all clean
