feat: add FUSE delete safety with audit and trash

--- a/config.yml
+++ b/config.yml
@@ -151,6 +151,15 @@ sandbox:
   fuse:
     enabled: true
     mount_base_dir: "./data/sessions"
+    audit:
+      enabled: true
+      mode: "monitor"             # monitor|soft_block|soft_delete|strict
+      trash_path: ".agentsh_trash"
+      ttl: "7d"
+      quota: "5GB"
+      strict_on_audit_failure: false
+      max_event_queue: 1024
+      hash_small_files_under: "1MB"
     # Kernel cache timeouts (higher = better perf, less fresh)
     entry_timeout: "1s"
     attr_timeout: "1s"
