CI: run integration in parallel with build matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         run: go build ./...
 
   integration:
-    needs: [test, build-matrix]
+    needs: test
     runs-on: ubuntu-latest
     timeout-minutes: 25
     steps:
