--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install build deps
+        run: sudo apt-get update && sudo apt-get install -y libseccomp-dev pkg-config
+
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
@@ -69,6 +72,9 @@ jobs:
     timeout-minutes: 25
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install build deps
+        run: sudo apt-get update && sudo apt-get install -y libseccomp-dev pkg-config
 
       - uses: actions/setup-go@v5
         with:
