--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,12 +59,18 @@ jobs:
             .gopath
           key: ${{ runner.os }}-go-${{ matrix.goos }}-${{ matrix.goarch }}-${{ hashFiles('go.sum') }}
 
+      - name: Install build deps (linux only)
+        if: matrix.goos == 'linux'
+        run: sudo apt-get update && sudo apt-get install -y libseccomp-dev pkg-config
+
       - name: Cross-compile (build only)
-        env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
-          CGO_ENABLED: 0
-        run: go build ./...
+        run: |
+          if [ "${{ matrix.goos }}" = "linux" ]; then
+            export CGO_ENABLED=1
+          else
+            export CGO_ENABLED=0
+          fi
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} CGO_ENABLED=$CGO_ENABLED go build ./...
 
   integration:
     needs: test
