--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,23 +63,13 @@ jobs:
         if: matrix.goos == 'linux'
         run: sudo apt-get update && sudo apt-get install -y libseccomp-dev pkg-config
 
-      - name: Install cross toolchain (linux/arm64)
-        if: matrix.goos == 'linux' && matrix.goarch == 'arm64'
-        run: |
-          sudo dpkg --add-architecture arm64
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu libseccomp-dev:arm64 pkg-config
-
       - name: Cross-compile (build only)
         run: |
           if [ "${{ matrix.goos }}" = "linux" ]; then
-            export CGO_ENABLED=1
             if [ "${{ matrix.goarch }}" = "arm64" ]; then
-              export CC=aarch64-linux-gnu-gcc
-              export CC_FOR_TARGET=$CC
-              export PKG_CONFIG_LIBDIR=/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/share/pkgconfig
-              export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
-              export CGO_LDFLAGS="-L/usr/lib/aarch64-linux-gnu"
+              export CGO_ENABLED=0
+            else
+              export CGO_ENABLED=1
             fi
           else
             export CGO_ENABLED=0
