--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
         if: matrix.goos == 'linux' && matrix.goarch == 'arm64'
         run: |
           sudo dpkg --add-architecture arm64
+          sudo rm -f /etc/apt/sources.list.d/ubuntu.sources
           # Restrict existing sources to amd64 to avoid hitting security.ubuntu.com for arm64
           sudo sed -i 's|^deb |deb [arch=amd64] |g' /etc/apt/sources.list
           # Add ports.ubuntu.com entries for arm64
