--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,35 +63,13 @@ jobs:
         if: matrix.goos == 'linux'
         run: sudo apt-get update && sudo apt-get install -y libseccomp-dev pkg-config
 
-      - name: Enable arm64 apt sources (linux/arm64)
-        if: matrix.goos == 'linux' && matrix.goarch == 'arm64'
-        run: |
-          sudo dpkg --add-architecture arm64
-          sudo rm -f /etc/apt/sources.list.d/ubuntu.sources
-          # Restrict existing sources to amd64 to avoid hitting security.ubuntu.com for arm64
-          sudo sed -i 's|^deb |deb [arch=amd64] |g' /etc/apt/sources.list
-          # Add ports.ubuntu.com entries for arm64
-          sudo tee /etc/apt/sources.list.d/arm64.list >/dev/null <<'EOF'
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main restricted universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-security main restricted universe multiverse
-          EOF
-          sudo apt-get update
-
-      - name: Install cross toolchain (linux/arm64)
-        if: matrix.goos == 'linux' && matrix.goarch == 'arm64'
-        run: |
-          sudo apt-get install -y gcc-aarch64-linux-gnu:amd64 libc6-dev:arm64 linux-libc-dev:arm64 libseccomp-dev:arm64 pkg-config
-
       - name: Cross-compile (build only)
         run: |
           if [ "${{ matrix.goos }}" = "linux" ]; then
-            export CGO_ENABLED=1
             if [ "${{ matrix.goarch }}" = "arm64" ]; then
-              export CC=aarch64-linux-gnu-gcc
-              export PKG_CONFIG_LIBDIR=/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/lib/pkgconfig
-              export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
-              export CGO_LDFLAGS="-L/usr/lib/aarch64-linux-gnu"
+              export CGO_ENABLED=0
+            else
+              export CGO_ENABLED=1
             fi
           else
             export CGO_ENABLED=0
