--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,7 @@ jobs:
 
       - name: Install build deps (linux only)
         if: matrix.goos == 'linux'
-        run: sudo apt-get update && sudo apt-get install -y libseccomp-dev pkg-config
+        run: sudo apt-get update && sudo apt-get install -y libseccomp-dev libfuse-dev libfuse3-dev pkg-config
 
       - name: Cross-compile (build only)
         run: |
