--- a/configs/policies/ci-strict.yaml
+++ b/configs/policies/ci-strict.yaml
@@ -20,8 +20,8 @@ file_rules:
   - name: allow-workspace
     description: Full access within workspace
     paths:
-      - "/workspace"
-      - "/workspace/**"
+      - "${PROJECT_ROOT}"
+      - "${PROJECT_ROOT}/**"
     operations:
       - "*"
     decision: allow
@@ -83,7 +83,7 @@ file_rules:
   - name: allow-npm-cache-read
     description: npm cache read access
     paths:
-      - "/home/**/.npm/**"
+      - "${HOME}/.npm/**"
       - "/root/.npm/**"
     operations:
       - read
@@ -95,7 +95,7 @@ file_rules:
   - name: allow-pip-cache-read
     description: pip cache read access
     paths:
-      - "/home/**/.cache/pip/**"
+      - "${HOME}/.cache/pip/**"
       - "/root/.cache/pip/**"
     operations:
       - read
@@ -111,7 +111,7 @@ file_rules:
   - name: deny-home
     description: Block access to home directories
     paths:
-      - "/home/**"
+      - "${HOME}/**"
       - "/root/**"
     operations:
       - "*"
