--- a/configs/policies/default.yaml
+++ b/configs/policies/default.yaml
@@ -20,8 +20,8 @@ file_rules:
   - name: allow-workspace-read
     description: Allow reading any file in workspace
     paths:
-      - "/workspace"
-      - "/workspace/**"
+      - "${PROJECT_ROOT}"
+      - "${PROJECT_ROOT}/**"
     operations:
       - read
       - open
@@ -33,8 +33,8 @@ file_rules:
   - name: allow-workspace-write
     description: Allow writing/creating files in workspace
     paths:
-      - "/workspace"
-      - "/workspace/**"
+      - "${PROJECT_ROOT}"
+      - "${PROJECT_ROOT}/**"
     operations:
       - write
       - create
@@ -46,8 +46,8 @@ file_rules:
   - name: approve-workspace-delete
     description: Require approval for deleting files in workspace
     paths:
-      - "/workspace"
-      - "/workspace/**"
+      - "${PROJECT_ROOT}"
+      - "${PROJECT_ROOT}/**"
     operations:
       - delete
       - rmdir
@@ -114,7 +114,7 @@ file_rules:
   - name: allow-npm-cache
     description: npm cache access
     paths:
-      - "/home/**/.npm/**"
+      - "${HOME}/.npm/**"
       - "/root/.npm/**"
     operations:
       - "*"
@@ -123,7 +123,7 @@ file_rules:
   - name: allow-pip-cache
     description: pip cache access
     paths:
-      - "/home/**/.cache/pip/**"
+      - "${HOME}/.cache/pip/**"
       - "/root/.cache/pip/**"
     operations:
       - "*"
@@ -132,7 +132,7 @@ file_rules:
   - name: allow-cargo-cache
     description: Cargo cache access
     paths:
-      - "/home/**/.cargo/**"
+      - "${HOME}/.cargo/**"
       - "/root/.cargo/**"
     operations:
       - "*"
@@ -145,7 +145,7 @@ file_rules:
   - name: deny-ssh-keys
     description: Block access to SSH keys
     paths:
-      - "/home/**/.ssh/**"
+      - "${HOME}/.ssh/**"
       - "/root/.ssh/**"
     operations:
       - "*"
@@ -154,7 +154,7 @@ file_rules:
   - name: deny-aws-credentials
     description: Block AWS credentials
     paths:
-      - "/home/**/.aws/**"
+      - "${HOME}/.aws/**"
       - "/root/.aws/**"
     operations:
       - "*"
@@ -163,9 +163,9 @@ file_rules:
   - name: deny-cloud-credentials
     description: Block cloud provider credentials
     paths:
-      - "/home/**/.gcloud/**"
-      - "/home/**/.azure/**"
-      - "/home/**/.config/gcloud/**"
+      - "${HOME}/.gcloud/**"
+      - "${HOME}/.azure/**"
+      - "${HOME}/.config/gcloud/**"
     operations:
       - "*"
     decision: deny
@@ -184,8 +184,8 @@ file_rules:
   - name: deny-git-credentials
     description: Block git credentials
     paths:
-      - "/home/**/.git-credentials"
-      - "/home/**/.gitconfig"
+      - "${HOME}/.git-credentials"
+      - "${HOME}/.gitconfig"
       - "**/.git/config"
     operations:
       - read
