fix(release): consolidate Linux archives to avoid duplicate naming

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -104,13 +104,13 @@ builds:
   #     - -s -w -X main.version={{.Version}} -X main.commit={{.ShortCommit}}
 
 archives:
-  - id: agentsh-linux-amd64
+  - id: agentsh-linux
     ids:
       - agentsh-linux
       - shim-linux
       - unixwrap-linux-amd64
     formats: [tar.gz]
-    name_template: "{{ .ProjectName }}_{{ .Version }}_linux_amd64"
+    name_template: "{{ .ProjectName }}_{{ .Version }}_linux_{{ .Arch }}"
     # unixwrap only built for amd64, so binary count differs from arm64
     allow_different_binary_count: true
     files:
@@ -118,29 +118,7 @@ archives:
       - LICENSE
       - config.yml
       - default-policy.yml
-      - src: build/envshim/linux_amd64/*
-        dst: .
-        strip_parent: true
-    builds_info:
-      mode: 0755
-      group: root
-      owner: root
-
-  - id: agentsh-linux-arm64
-    ids:
-      - agentsh-linux
-      - shim-linux
-      # unixwrap not available for arm64 - users get graceful degradation
-    formats: [tar.gz]
-    name_template: "{{ .ProjectName }}_{{ .Version }}_linux_arm64"
-    # unixwrap only built for amd64, so binary count differs
-    allow_different_binary_count: true
-    files:
-      - README.md
-      - LICENSE
-      - config.yml
-      - default-policy.yml
-      - src: build/envshim/linux_arm64/*
+      - src: build/envshim/linux_{{ .Arch }}/*
         dst: .
         strip_parent: true
     builds_info:
