fix(ci): serialize test execution in release workflow
Use -p=1 to prevent Go build cache corruption during parallel compilation.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
             make
 
       - name: Test
-        run: go test ./...
+        run: go test -p=1 ./...
 
       - name: Smoke
         run: make smoke
